Public all pages dark mode design fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+    background-color: rgb(79, 70, 229) !important;
+    color: white !important;
+  }  
